welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: Invalid literal number
  for (c <- 0to x){
            ^Array1:6: error: illegal start of simple expression
  for (c <- 0to x){
            ^Array1:21: error: ')' expected but '}' found.
}
^